{
    "name": "GameOne",
    "maps": [
        {
            "name": "gameOne",
            "id": "8bbf7ec5-fa08-42b7-b931-c393be5b7569",
            "actions": [
                {
                    "name": "BtnY",
                    "type": "Button",
                    "id": "53e8852f-d6b1-4ed4-ac35-84d7844030bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BtnX",
                    "type": "Button",
                    "id": "452a5e97-0f75-40a9-b575-c1a32d150dea",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BtnA",
                    "type": "Button",
                    "id": "d2629db8-581d-45fe-a32f-8713b8a1c738",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BtnB",
                    "type": "Button",
                    "id": "98ef4561-dac4-4ee6-b533-c2c126f217b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "72be6017-3412-4c69-a4f1-4f35d488fb51",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "BtnY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d198659-99e9-42bd-8960-036255aaa680",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "BtnX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61a541fb-2bfc-4a17-918d-14cd51b06091",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "BtnA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d8a18a38-9b80-485f-95dc-8d8c1559a372",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "GamePad",
                    "action": "BtnB",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "GamePad",
            "bindingGroup": "GamePad",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}